--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+    <title>Gokulakannan</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,11 +45,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Your Portfolio</h1>
+        <h1></h1>
         <p>Welcome to my portfolio! Below you'll find links to various coding projects I've worked on. Feel free to check them out!</p>
         <ul>
             <li>
-                <a href="https://github.com/username/python-tkinter-apps" target="_blank">Python Tkinter Apps</a>
+                <a href="https://github.com/GKCODES-2025/Python-Tkinter-Apps" target="_blank">Python Tkinter Apps</a>
                 <p class="repo-description">A collection of GUI-based applications built with Python and Tkinter.</p>
             </li>
         </ul>
