--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#github">GitHub</a></li>
+        <li><a href="https://github.com/GKCODES-2025" target="_blank">GitHub</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
