--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="project-info">
         <h3>Python Tkinter Apps</h3>
         <p>A collection of GUI-based applications built using Python and Tkinter. Explore user-friendly applications and interface design.</p>
-        <a href="https://link-to-project.com" target="_blank">View Project</a>
+        <a href="https://github.com/GKCODES-2025/Python-Tkinter-Apps" target="_blank">View Project</a>
       </div>
     </div>
   </section>
